--- a/public/landing/login.html
+++ b/public/landing/login.html
@@ -33,7 +33,7 @@
         .Paragraph {
           font-size: larger;
           position:relative;
-          top: 60px;
+          top: 210px;
           background:
             linear-gradient( 
               to bottom,
@@ -41,6 +41,8 @@
               skyblue,
               cyan
             );
+            text-align: center;
+            border-radius: 30px;
           }
          .barry {
            width: 380px;
@@ -77,6 +79,7 @@
           background: linear-gradient(to right, red, blue);
           border-radius: 30px;
           transition: .5s;
+          color: white;
          }
          .inputs {
            top: 180px;
@@ -105,6 +108,7 @@
           border: 0;
           outline: none;
           border-radius: 30px;
+          color: white
         }
         .check-box {
           margin: 30px 10px 30px 0;
